# Open-IMO-CII-Calculator

./: .gitignore  README.md
.github/: CONTRIBUTING  (+1 more)
python-impl/: README.md  pyproject.toml
python-impl/demo-console-app/: README.md  main.py  multi_fuel_demo.py  single_fuel_demo.py  single_fuel_gas_carrier_demo.py
python-impl/demo-console-app/demo-results/: .gitignore  .gitkeep  35acf7dc-60a3-4a6a-9773-a22c9f5fc699-single-fuel-demo.json  3b6c5150-8e0a-45bf-9094-5edb474d04ee-multi-fuel-demo.json  b3fa068c-1312-4486-8090-ca2f2faf27a3-single-fuel-gas-carrier-demo.json
python-impl/open_imo_cii_calculator/: __init__.py  ship_carbon_intensity_calculator.py
python-impl/open_imo_cii_calculator/models/: __init__.py  capacity_unit.py  fuel_type.py  imo_cii_boundary.py  imo_cii_rating.py  ship_type.py
python-impl/open_imo_cii_calculator/services/: __init__.py  carbon_intensity_indicator_calculator_service.py  rating_boundaries_service.py  reduction_factor_utils.py  ship_capacity_calculator_service.py  ship_mass_of_co2_emissions_calculator_service.py  ship_transport_work_calculator_service.py
python-impl/tests/: conftest.py  test_ship_carbon_intensity_calculator.py
python-impl/tests/test_models/: test_capacity_unit.py  test_fuel_type.py  test_imo_cii_boundary.py  test_imo_cii_rating.py  test_ship_type.py
python-impl/tests/test_services/: test_carbon_intensity_indicator_calculator_service.py  test_rating_boundaries_service.py  test_reduction_factor_utils.py  test_ship_capacity_calculator_service.py  test_ship_mass_of_co2_emissions_calculator_service.py  (+2 more)
(+57 files in other folders)
