[tool.poetry]
name = "open-imo-cii-calculator"
version = "0.1.0"
description = "A python implementation of the Open IMO CII Calculator"
authors = ["Etive Mor Limited <engineering@etive-mor.com>"]
readme = "README.md"
packages = [{include = "open_imo_cii_calculator"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

